--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 
 <web-app>
   
-  <!-- Servlets -->
+  <!-- Servlets 
   <servlet>
     <servlet-name>greetServlet</servlet-name>
     <servlet-class>sky.server.GreetingServiceImpl</servlet-class>
@@ -14,7 +14,7 @@
   <servlet-mapping>
     <servlet-name>greetServlet</servlet-name>
     <url-pattern>/skywalker/greet</url-pattern>
-  </servlet-mapping>
+  </servlet-mapping> -->
   
   <!-- Default page to serve -->
   <welcome-file-list>
